day3/lab10-dev/manifests/green/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-green
  namespace: ci-bg-stuXX # 🐳  Change this
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
      version: green
  template:
    metadata:
      labels:
        app: podinfo
        version: green
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.0.0
          ports:
            - containerPort: 9898
