day3/lab10-dev/manifests/green/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-green
  namespace: ci-bg-stuXX # 🐳  Change this
spec:
  selector:
    app: podinfo
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9898
  type: ClusterIP
